# quickcollider

./: CMakeLists.txt  README.md  README.txt  generic_signal_handler.hpp  main.cpp  osc_client.hpp  osc_dispatcher.cpp  osc_dispatcher.hpp  osc_server.cpp  osc_server.hpp  qml_osc_interface.cpp  qml_osc_interface.hpp  util.hpp
app/: main.cpp
cmake/: FindDependencies.cmake
demo/: dynamic.scd  gui.qml  gui.scd
gui/model/: graph_model.cpp  graph_model.hpp  multi_slider_model.hpp  slider_model.hpp
gui/util/: multi_slider_model.hpp  range_model.hpp
gui/utility/: array_layout.hpp  mapping.hpp
gui/widgets/: Graph.qml  Knob.qml  MultiSlider.qml  Oscilloscope.qml  Slider.qml  Slider2D.qml  Waveform.qml  graph_plotter.cpp  graph_plotter.hpp  oscilloscope.cpp  oscilloscope.hpp  oscilloscope_shm.hpp  sf_cache_stream.cpp  sf_file_stream.cpp  sf_view.cpp  sf_view.hpp
osc/: osc_client.cpp  osc_client.hpp  osc_dispatcher.cpp  osc_dispatcher.hpp  osc_server.cpp  osc_server.hpp  qml_osc_interface.cpp  qml_osc_interface.hpp
sc/: quick_oscilloscope.sc  quickgui.sc
test/: dynamic.qml  gui.qml  gui.scd  scene.qml  test.scd
utility/: generic_signal_handler.hpp  utility.hpp
